--- a/css/eating-leaves.css
+++ b/css/eating-leaves.css
@@ -1,4 +1,4 @@
-.carousel-control {
+.carousel-gradient {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -7,7 +7,7 @@
   font-size: 20px;
   color: #fff;
   text-align: center;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0);
-  filter: alpha(opacity=50);
-  opacity: .5;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+  filter: alpha(opacity=100);
+  opacity: 0;
 }
