--- a/css/eating-leaves.css
+++ b/css/eating-leaves.css
@@ -5,9 +5,9 @@
   left: 0;
   width: 15%;
   font-size: 20px;
-  color: #fff;
+  color: #000;
   text-align: center;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0);
   filter: alpha(opacity=100);
   opacity: 0;
 }
