--- a/css/eating-leaves.css
+++ b/css/eating-leaves.css
@@ -41,6 +41,9 @@
 .carousel-font {
   color:#000;
 }
+.carousel {
+  margin-bottom: 60px;
+}
 
 .navbar {
   background-color: rgba(255, 255, 255, .075);
